--- a/Laboratory Work 1/Views/Employee/Index.cshtml
+++ b/Laboratory Work 1/Views/Employee/Index.cshtml
@@ -41,9 +41,11 @@
                     @Html.DisplayFor(modelItem => item.Position)
                 </td>
                 <td>
-                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                    @* <a asp-action="Edit" asp-controller="EmployeeController" asp-route-id="@item.Id">Edit</a> | *@
+                    <a asp-action="Details" asp-controller="EmployeeController" asp-route-id="@item.Id">Details</a>|
+                    <a asp-action="Details" href="https://localhost:7226/Employee/Details" asp-route-id="@item.Id">Details</a>|
+                    @* <a asp-action="Details" asp-route-id="@item.Id">Details</a> | *@
+                    @* <a asp-action="Delete" asp-route-id="@item.Id">Delete</a> *@
                 </td>
             </tr>
         }
